--- a/index.html
+++ b/index.html
@@ -27,6 +27,51 @@
         </ul>
    </nav>
 
+   <div class=“paraleft paraStyle ”>
+     <h2> Dude </h2>
+     <br>
+     <p>
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <br>
+      <br>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+    </p>
+    <button> class="btn> read more...</button>
+   </div>
+
+   <div class=“pararight paraStyle”>
+     <h2> Dude </h2>
+     <br>
+     <p>
+     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      <br>
+      <br>
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      <br>
+      <br>
+      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      <br>
+      <br>
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+   </div>
+   <div class=“list”>
+     <ol>
+       <li> Long Yoshi </li>
+       <li> Square Yoshi </li>
+       <li> Double Yoshi </li>
+       <li> Emu Yoshi </li>
+       <li> Villager spawn Yoshi </li>
+     </ol>
+   </div>
+
+
+
+
    <script src="js/script.js">
 
    </script>
